2011-11-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSUserDefaultsController.m
	([GSUserDefaultsHelper-valueForKey:]) Use a marker for values
	being nil. This should fix bug #34790.

2011-11-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m (-bestRepresentationForDevice:): When
	all other matching criteria fail, use the first image instead
	of the last (arbitrary, but seems to match cocoa.)

2011-11-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSAlert.m: Use NSImageScaleProportionallyUpOrDown on
	app icon button cell.

2011-11-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m (-setScalesWhenResized:): Disable this method
	as it is currently broken on the cairo backend.
	* Source/NSApplication.m (-setApplicationIconImage:): Don't
	use call -setScalesWhenResized:, because if it worked as it is
	supposed to, it would scale all icon reps down to 48x48,
	making large icon sizes useless.

2011-11-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSInfoPanel.m: Fix app icon button size at 48x48 and use
	NSImageScaleProportionallyUpOrDown.
	This prevents icons with large sizes (e.g. 512x512 pixel) from
	making the info panel really big.

2011-11-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/AppKit/NSImageCell.h:
	* Headers/AppKit/NSCell.h: Move NSImageScaling constants to NSCell
	* Source/NSImageCell.m:
	* Source/NSCell.m: Refactor the image scaling logic to a private
	method in NSCell, -_scaleImageWithSize:toFitInSize:scalingType:
	which can be share by NSImageCell, NSButtonCell, and any other
	cell classes that need it.
	* Source/NSButtonCell.m:
	* Headers/AppKit/NSButtonCell.h: Implement -imageScaling and
	-setImageScaling methods. 
	* Source/GSThemeDrawing.m:
	* Headers/Additions/GNUstepGUI/GSTheme.h: Remove the
	-drawImage:inButtonCell:withFrame:position: API intended
	to let themes substitute images right before drawing,
	as IMHO it's the wrong place to hook in new images (by